scrollbar: fix graph legend height

--- a/public/sass/components/_panel_graph.scss
+++ b/public/sass/components/_panel_graph.scss
@@ -49,6 +49,7 @@
 }
 
 .graph-legend {
+  display: flex;
   flex: 0 1 auto;
   max-height: 30%;
   margin: 0;
@@ -56,7 +57,8 @@
   padding-top: 6px;
   position: relative;
 
-  height: 100%;
+  // fix for Firefox (white stripe on the right of scrollbar)
+  width: 99%;
 
   .popover-content {
     padding: 0;
@@ -64,6 +66,10 @@
 }
 
 .graph-legend-content {
+  position: relative;
+}
+
+.graph-legend-scroll {
   position: relative;
 }
 
